Replace `insert_link` with `link`

--- a/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
+++ b/app/src/interfaces/input-rich-text-html/tinymce-overrides.css
@@ -74,7 +74,7 @@
 	color: var(--foreground-normal);
 	font-size: 24px;
 	font-family: 'Material Icons';
-	content: 'insert_link';
+	content: 'link';
 	font-feature-settings: 'liga';
 }
 
